# youtube2opus

./: .gitignore  README.md  main.py  pyproject.toml  repomix-output.xml
output/: Lil_Peep_-_Runaway_Official_Video.webm  Lil_Peep_-_ghost_girl_Official_Audio.webm  Lil_Peep_-_nuts_feat._rainy_bear_Official_Audio.webm  PRECISO_ME_ENCONTRAR_Cowboy_Bebop.webm  SUCCESION_OPENING_BUT..._SCIENCE.webm  lil_peep_-_benz_truck_prod._smokeasac.webm
src/: config.py  denoiser.py  downloader.py  encoder.py  feed.py  process_pipeline.py  superres.py  types.py  utils.py
src/fat/: config.py  gpu_utils.py  io_handlers.py  logging_config.py  pipeline.py  processing.py  types.py
