[project]
name = "youtube2opus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flowhigh",
    "matplotlib>=3.10.7",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "pysoundfile>=0.9.0.post1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "sox>=1.5.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.0",
    "torchvision>=0.24.1",
    "yt-dlp>=2025.11.12",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]

[tool.uv.sources]
flowhigh = { git = "https://github.com/resemble-ai/flowhigh.git", rev = "dev" }
