[project]
name = "youtube2opus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "mutagen>=1.47.0",
    "pathvalidate>=3.3.1",
    "pydub>=0.25.1",
    "pysoundfile>=0.9.0.post1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "sox>=1.5.0",
    "yt-dlp>=2025.11.12",
    "fat-llama-cuda13x",
    "tqdm>=4.67.1",
    "pipwin>=0.5.2",
]

[dependency-groups]
dev = ["black>=25.11.0"]

[tool.uv.sources]
fat-llama-cuda13x = { git = "https://github.com/thecodergus/fat_llama_cuda13x.git" }
